<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/github"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_github_username"/>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_top_margin"
            android:layout_marginEnd="@dimen/view_horizontal_margin"
            android:layout_marginStart="@dimen/view_horizontal_margin"
            android:inputType="text"
            android:importantForAutofill="no"
            android:text="@string/github_default_user_name"/>

        <Button
            android:id="@+id/get_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/view_top_margin"
            android:paddingEnd="@dimen/item_horizontal_margin"
            android:paddingStart="@dimen/item_horizontal_margin"
            android:text="@string/watch_github"/>
    </LinearLayout>
</layout>